--- a/less/mainSection.less
+++ b/less/mainSection.less
@@ -33,6 +33,7 @@
             position: absolute;
             background: rgba(255, 255, 255, 0.5);
             color: #0f4c75;
+            margin-top: 2%;
         }
     }
     span {
@@ -57,7 +58,7 @@
             figure {
                 @media (max-width: 1000px) {
                     width: 80%;
-                    margin-bottom: 1%;
+                    margin-bottom: 2%;
                     margin-left: 10%;
                 }
                 width: 20%;
